package com.aguabolt.reservas.domain.models;

public enum EstadoReserva {
    CONFIRMADA,
    EN_ESPERA,
    OCUPADA,
    FINALIZADA,
    CANCELADA,
    CANCELADA_POR_NO_SHOW
}
